--- a/app/index.html
+++ b/app/index.html
@@ -145,6 +145,7 @@
 
 
     <script src="modules/statistics/statistics.controller.js"></script>
+    <script src="modules/statistics/statistics.service.js"></script>
 
     <script src="modules/connectMap/connectMap.controller.js"></script>
 
