--- a/app/modules/connectMap/connectMap.html
+++ b/app/modules/connectMap/connectMap.html
@@ -1,28 +1,39 @@
-<div class="anim-slide-left service--watch--wrap">
-    <div style="width: 100%;float: left;height: 100px;">
-        <div style="width: 25%;float: left;">
-            对接系统数量
-            <span>2个</span>
+<div class="anim-slide-left connect--map--wrap">
+    <div class="connect--map--wrap_data--count" >
+        <div class="cell-box">
+            <span class="fa fa-database "></span>
+            <div class="data--description">
+                <p class="head">对接系统数量</p>
+                <span class="data--value color-one">2个</span>
+            </div>
         </div>
-        <div style="width: 25%;float: left;">
-            归档记录数量
-            <span>15436条</span>
+        <div class="cell-box">
+            <span class="fa fa-cubes"></span>
+            <div class="data--description">
+                <p class="head">归档记录数量</p>
+                <span class="data--value color-two">15436条</span>
+            </div>
         </div>
-        <div style="width: 25%;float: left;">
-            数据总量
-            <span>25GB</span>
+        <div class="cell-box">
+            <span class="fa fa-hdd-o" style="font-size: 28px"></span>
+            <div class="data--description">
+                <p class="head">数据总量</p>
+                <span class="data--value color-three">25GB</span>
+            </div>
         </div>
-        <div style="width: 25%;float: left;">
-            数据被调用次数
-            <span>233次</span>
+        <div class="cell-box">
+            <span class="fa fa-external-link"></span>
+            <div class="data--description">
+                <p class="head">数据被调用次数</p>
+                <span class="data--value color-four">233次</span>
+            </div>
         </div>
     </div>
-    <div style="width: 100%;float: left;height: 80%;overflow: auto;position: relative">
-        <connect-map-tree nodes="data">
-        </connect-map-tree>
-        <div ng-show="vm.tiptool.show" ng-style="{position:'absolute','left':vm.tiptool.y + 130,'top':vm.tiptool.x - 70}">
-            <div>
-                <table class="table table-striped">
+    <div style="width: 100%;float: left;height: calc(100% - 143px);overflow: auto;position: relative">
+        <connect-map-tree nodes="data"></connect-map-tree>
+        <div ng-show="vm.tiptool.show" ng-style="{position:'absolute','left':vm.tiptool.y + 150,'top':vm.tiptool.x - 130}">
+            <div class="tiptool--show--wrap">
+                <table class="table tiptool--show--data--table">
                     <thead>
                         <tr class="table__th--tr">
                             <th>ID</th>
@@ -40,6 +51,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <span class="org--bot"></span>
             </div>
         </div>
 
