--- a/app/modules/statistics/statistics.html
+++ b/app/modules/statistics/statistics.html
@@ -1,49 +1,87 @@
-<div class="anim-slide-left service--watch--wrap">
-   <div style="width : 100%;min-height: 200px;">
+<div class="anim-slide-left statistics--wrap">
+    <div class="statistics--wrap_data--count" >
+        <div class="cell-box">
+            <span class="fa fa-database "></span>
+            <div class="data--description">
+                <p class="head">对接系统数量</p>
+                <span class="data--value color-one">2 个</span>
+            </div>
+        </div>
+        <div class="cell-box">
+            <span class="fa fa-university"></span>
+            <div class="data--description">
+                <p class="head">业务单位数量</p>
+                <span class="data--value color-two">34 家</span>
+            </div>
+        </div>
+        <div class="cell-box">
+            <span class="fa fa-cubes"></span>
+            <div class="data--description">
+                <p class="head">归档记录数量</p>
+                <span class="data--value color-three">15436 条</span>
+            </div>
+        </div>
+        <div class="cell-box">
+            <span class="fa fa-hdd-o" style="font-size: 28px"></span>
+            <div class="data--description">
+                <p class="head">数据总量</p>
+                <span class="data--value color-four">25 GB</span>
+            </div>
+        </div>
+        <div class="cell-box">
+            <span class="fa fa-stack-overflow"></span>
+            <div class="data--description">
+                <p class="head">数据被调用次数</p>
+                <span class="data--value color-five">11423 条</span>
+            </div>
+        </div>
+        <div class="cell-box">
+            <span class="fa fa-paper-plane-o"></span>
+            <div class="data--description">
+                <p class="head">涉及业务数量</p>
+                <span class="data--value color-six">233 个</span>
+            </div>
+        </div>
+    </div>
 
-       <div style="width: 100%;float: left">
-           <md-select ng-model="vm.parameter.year"
-                      style="float: left;
-                    width: 100px;
-                    margin-right: 20px;"
-           >
-               <md-option ng-value="2017" >2017</md-option>
-               <md-option ng-value="2016" >2016</md-option>
-               <md-option ng-value="2015" >2015</md-option>
+    <div class="statistics--wrap_data--form clearfix">
+       <h4 class="data--form--head">月度归档数据量</h4>
+       <div class="condition--filter--box" >
+           <md-select style="width: 95px;" ng-model="vm.parameter.year" ng-change="vm.getRecordNum()">
+               <md-option ng-repeat="year in vm.yearLists" ng-value="year" >{{year}}</md-option>
                <md-option ng-value="'all'" >所有年度</md-option>
            </md-select>
-
-           <md-select ng-model="vm.parameter.system"
-                      style="float: left;
-                    width: 100px;
-                    margin-right: 20px;"
-           >
-
+           <md-select style="width: 100px;" ng-model="vm.parameter.systemName" ng-change="vm.getRecordNum()">
+               <md-option ng-repeat="systemLists in vm.systemLists" ng-value="systemLists" >{{systemLists}}</md-option>
                <md-option ng-value="'all'" >所有系统</md-option>
-
            </md-select>
+           <md-button></md-button>
        </div>
-       <div id="container" style="min-width:400px;height:400px"></div>
-   </div>
-
-    <div style="width: 30%;float: left;padding: 10px 10px;margin: 50px 50px;">
-        <div id="topTen" style="min-width:400px;height:400px"></div>
-    </div>
-    <div style="width: 25%;float: left;padding: 10px 10px;margin: 50px 50px;">
-        <h3>法人服务主题分布</h3>
-        <div>
-            <div id="legonPerson" style="min-width:400px;height:400px"></div>
-
-        </div>
-
+       <div class="" id="container"  style="width: 100%"></div>
     </div>
 
-    <div style="width: 25%;float: left;padding: 10px 10px;margin: 50px 50px;">
-        <h3>个人事项服务主题分布</h3>
-        <div>
-            <div id="personalService" style="min-width:400px;height:400px"></div>
-        </div>
-    </div>
+    <!--<div class="row" >-->
+        <!--<div class="statistics&#45;&#45;wrap_data&#45;&#45;form clearfix" style="height: 100%">-->
+            <!--<div style="width: 220px;height: 30px;float: left;"></div>-->
+
+            <!--<div class="col-md-8 " id="topTen" style="height: 100%"></div>-->
+
+
+            <!--&lt;!&ndash;<div class="col-md-6 statistics&#45;&#45;wrap_data&#45;&#45;form">&ndash;&gt;-->
+            <!--&lt;!&ndash;<h3>法人服务主题分布</h3>&ndash;&gt;-->
+            <!--&lt;!&ndash;<div>&ndash;&gt;-->
+            <!--&lt;!&ndash;<div id="legonPerson" style="min-width:400px;height:400px"></div>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--&lt;!&ndash;<div class="col-md-6 statistics&#45;&#45;wrap_data&#45;&#45;form" >&ndash;&gt;-->
+            <!--&lt;!&ndash;<h3>个人事项服务主题分布</h3>&ndash;&gt;-->
+            <!--&lt;!&ndash;<div>&ndash;&gt;-->
+            <!--&lt;!&ndash;<div id="personalService" style="min-width:400px;height:400px"></div>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--</div>-->
+
+    <!--</div>-->
 </div>
 
 
